--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,21 +29,25 @@
         </svg> -->
       </div>
       <div class="menus">
-        <button>SPORT</button>
-        <button>TECH</button>
-        <button>WORLD</button>
-        <button>FINANCE</button>
-        <button>POLITICS</button>
-        <button>BUSINESS</button>
-        <button>ECONOMICS</button>
-        <button>ENTERTAINMENT</button>
-        <button>BEAUTY</button>
-        <button>TRAVEL</button>
-        <button>MUSIC</button>
-        <button>FOOD</button>
-        <button>SCIENCE</button>
-        <button>GAME</button>
-        <button>ENERGY</button>
+        <!-- <div class="menus-1"> -->
+          <button>SPORT</button>
+          <button>TECH</button>
+          <button>WORLD</button>
+          <button>FINANCE</button>
+          <button>POLITICS</button>
+          <button>BUSINESS</button>
+          <button>ECONOMICS</button>
+          <button>ENTERTAINMENT</button>
+        <!-- </div> -->
+        <!-- <div class="menus-2"> -->
+          <button>BEAUTY</button>
+          <button>TRAVEL</button>
+          <button>MUSIC</button>
+          <button>FOOD</button>
+          <button>SCIENCE</button>
+          <button>GAME</button>
+          <button>ENERGY</button>
+        <!-- </div> -->
       </div>
     </section>
     <section id="news-board">
